--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "scripts":{
-    "server":"nodemon index.js"
+  "scripts": {
+    "server": "nodemon index.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoos": "^0.0.1-security",
+    "mongoose": "^7.3.1",
     "nodemon": "^2.0.22"
   }
 }
